@@ -16,9 +16,9 @@
 </form>
 
 <div class=navigation lang=en>
-[List files by <a href="schema/uri.html">URI</a>,
-<a href="schema/pubid.html">Public ID</a>,
-<a href="schema/editor.html">Editor</a>]
+[List files by <a href="schema/list/uri.html">URI</a>,
+<a href="schema/list/pubid.html">Public ID</a>,
+<a href="schema/list/editor.html">Editor</a>]
 [<a href="schema-add">Add file</a>]
 </div>
 
