@@ -1,5 +1,10 @@
 2007-08-12  Wakaba  <wakaba@suika.fam.cx>
 
+	* schema.cgi: Use title for lists.  Resolve system
+	identifiers in |ref| property.
+
+2007-08-12  Wakaba  <wakaba@suika.fam.cx>
+
 	* schema.cgi: Public and system identifiers and references
 	are now supported in property view.
 	List of URIs are now list/uri.html, no longer list.html.
